# AgoraAutomationEngineerAsignment

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: code-quality-check.yml
api/: base_client.py  posts_client.py
framework/api/: api_constants.py
framework/api/clients/: base_client.py  posts_client.py  user_client.py
framework/api/data_models/: bank_statement.py  property_data.py  user_profile.py
framework/api/models/: bank_statement.py  property_data.py
framework/drivers/: driver_factory.py  drivers_constants.py
framework/reporting/allure/: allure_helper.py
framework/reporting/slack/: slack_reporter.py
framework/reporting/testrail/: testrail_client.py  testrail_constants.py  testrail_reporter.py
framework/ui/: element_init.py  selenium_wrapper.py  ui_constants.py
framework/ui/pages/: __init__.py  cart_page.py  checkout_complete_page.py  checkout_info_page.py  checkout_overview_page.py  inventory_page.py  login_page.py
framework/utils/: helper_functions.py
pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_info_page.py  checkout_overview_page.py  inventory_page.py  login_page.py
tests/: __init__.py
tests/api/: __init__.py  test_posts_crud.py
tests/api/post_tests/: test_posts.py
tests/ui/: __init__.py  test_checkout_flow.py
tests/ui/checkout_tests/: test_checkout_flow.py
utils/: __init__.py  config.py  constants.py  data_generator.py
