[project]
name = "agora-automation-assignment"
version = "0.1.0"
description = "UI and API test automation assignment – Agora"
requires-python = ">=3.11"

dependencies = [
    "pytest",
    "requests",
    "python-dotenv",
    "selenium",
    "webdriver-manager",
    "pytest-check>=2.4.1",
    "testrail-api>=1.13.4",
    "pytz>=0.2.0",
    "pytest-dependency>=0.6.0",
    "pytest-order>=1.3.0"
]

# ---------------------------------------------------------------------------
# Pytest configuration (replaces pytest.ini)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]

# Default CLI flags applied to every run:
#   -v  → verbose output (show each test name)
#   -s  → disable output capturing (print() statements appear in terminal)
addopts = "-v -s"

# Custom markers – must be declared here to avoid PytestUnknownMarkWarning
markers = [
    "ui: End-to-end UI tests against SauceDemo",
    "api: API tests against JSONPlaceholder",
    "case_id(id): mark test method with TestRail case ID",
    "test_name(name): mark test method with TestRail test name or a highly readable report name",
    "dependency(name, scope, depends): mark test with dependency (from pytest-dependency)",
    "order(order): mark test with explicit execution order (from pytest-ordering)"
]

# ---------------------------------------------------------------------------
# Logging configuration
# ---------------------------------------------------------------------------
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] [%(name)s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
